[tool.poetry]

name = "{{ cookiecutter.project_slug }}"
version = "0.0"
description = "{{ cookiecutter.description }}"

license = "BSD 3-Clause License"

readme = "README.md"

homepage = "https://pypi.org/project/{{ cookiecutter.project_slug }}"
repository = "https://github.com/mitodl/{{ cookiecutter.project_slug }}/"

authors = [
  "MIT Office of Open Learning <mitx-devops@mit.edu>"
]

keywords = [
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.6"
]

[tool.poetry.dependencies]

python = "~2.7 || ^3.6"

[tool.poetry.dev-dependencies]

# Formatters
black = { version = "=18.9b0", python = "^3.6" }
isort = "=4.3.4"

# Linters
pylint = { version = "^2.0", python = "^3.6" }

# Testing
pytest = "^3.3"
pytest-cov = "*"
pytest-mock = "1.10.1"
responses = "0.10.5"
typing = { version = "^3.6.6", python = "^3.6" }
codecov = "*"

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
